<resources>
    <string name="android_version_incompatible">Android version not compatible, %s needed.</string>
    <string name="accessibility_service_description">Allows GTalkSMS to send you a message for every notifications.</string>
    <string name="panel_buddies">Buddies</string>
    <string name="panel_buddies_add_hint">buddy@jabber.org</string>
    <string name="panel_buddies_add_button">Add</string>
    <string name="panel_buddies_add_message">Request sent!</string>
    <string name="panel_buddies_popup_button_delete_title">Confirmation</string>
    <string name="panel_buddies_popup_button_delete">%1$s will be removed from your buddy list.\n</string>
    <string name="panel_buddies_popup_button_invite">Send Invite</string>
    <string name="panel_buddies_popup_button_ok">OK</string>
    <string name="panel_buddies_popup_button_cancel">Cancel</string>
    <string name="panel_buddies_popup_button_name">Name:</string>
    <string name="panel_buddies_popup_button_user_id">User ID:</string>
    <string name="panel_commands">Commands</string>
    <string name="panel_commands_hint">cmd:subcmd:args</string>
    <string name="panel_help">Help / About</string>
    <string name="panel_connection">Connection</string>
    <string name="panel_connection_notif">Account:</string>
    <string name="panel_connection_notif_hint">notification@jabber.org</string>
    <string name="panel_connection_notif_help">This address will be used to interact with GTalkSMS from your computer.</string>
    <string name="panel_connection_login">Login:</string>
    <string name="panel_connection_login_hint">login@jabber.org</string>
    <string name="panel_connection_password">Password:</string>
    <string name="panel_connection_auto_connect">Auto connect:</string>
    <string name="panel_connection_button_connect">Connect</string>
    <string name="panel_connection_button_connecting">Connecting&#8230;</string>
    <string name="panel_connection_button_disconnect">Disconnect</string>
    <string name="panel_connection_button_disconnecting">Disconnecting&#8230;</string>
    <string name="panel_connection_button_waiting">Waiting&#8230;</string>
    <string name="panel_connection_status">Connection Status</string>
    <string name="panel_main_adfree_version">Remove ads</string>
    <string name="panel_main_paypal">Donate via Paypal</string>
    <string name="about_authors">Authors</string>
    <string name="about_change_log">Change Log</string>
    <string name="about_donate_string">Buying donate versions on market shows your appreciation for the app to the developers :) You can also give a donation with Paypal:\n</string>
    <string name="about_donate_market">\tDonate via Google Market\n\n</string>
    <string name="about_donate_paypal">\tDonate via Paypal\n</string>
    <string name="about_donors">Donors</string>
    <string name="about_help">\n\nIf you can\'t find yours answers on the website, don\'t hesitate to ask for help at:\n</string>
    <string name="about_panel">About GTalkSMS</string>
    <string name="about_rate_help">\nPlease rate the application on Google Market:\n\</string>
    <string name="pref_all">Preferences</string>
    <string name="pref_app">Application settings</string>
    <string name="pref_app_advanced">Advanced settings</string>
    <string name="pref_app_auto_start_options">Auto-start options</string>
    <string name="pref_app_auto_stop_options">Auto-stop options</string>
    <string name="pref_app_connect_mainscreen">Connect on GTalkSMS start</string>
    <string name="pref_app_connect_mainscreen_help">Connects GTalkSMS when the Mainscreen is shown</string>
    <string name="pref_app_display_contact_number">Display Phone Number</string>
    <string name="pref_app_display_contact_number_help">Displays the phone number with the contact name</string>
    <string name="pref_app_enable_debug">Debug Log</string>
    <string name="pref_app_enable_debug_help">Enabled debug log messages, increases log verbosity</string>
    <string name="pref_app_format_responses">Format chat responses</string>
    <string name="pref_app_format_responses_help">Check if you want to format responses with bold and italic, doesn\'t work with all XMPP clients</string>
    <string name="pref_app_geo_link_app">Location map provider</string>
    <string name="pref_app_geo_link_app_gmap">Google Maps</string>
    <string name="pref_app_geo_link_app_gmap_help">Use Google Maps as location map provider</string>
    <string name="pref_app_geo_link_app_openstreetmap">Open Street Map</string>
    <string name="pref_app_geo_link_app_openstreetmap_help">Use Open Street Map as location map provider</string>
    <string name="pref_app_locale">Choose the application localization</string>
    <string name="pref_app_locale_help">Localization</string>
    <string name="pref_app_public_intents">Public Intent Options</string>
    <string name="pref_app_public_intents_enabled">Public Intents</string>
    <string name="pref_app_public_intents_enabled_help">Enable public Intents</string>
    <string name="pref_app_public_intents_token">Intent Token</string>
    <string name="pref_app_public_intents_token_help">The String that the Intent has to carry as \"token\" String</string>
    <string name="pref_app_public_intents_token_required">Public Intent Token</string>
    <string name="pref_app_public_intents_token_required_help">Enabled security token (recommended)</string>
    <string name="pref_app_ringtone">Ring with</string>
    <string name="pref_app_ringtone_help">Ringtone to use with the ring command</string>
    <string name="pref_app_sms">Search SMS command</string>
    <string name="pref_app_sms_mark_read_on_send">Mark SMS as read on reply</string>
    <string name="pref_app_sms_mark_read_on_send_help">Automatically mark a conversation as being read when you reply to the person</string>
    <string name="pref_app_sms_number">Number of SMS</string>
    <string name="pref_app_sms_number_help">Number of SMS to show</string>
    <string name="pref_app_sms_separate">Distinct Messages for every SMS</string>
    <string name="pref_app_sms_separate_help">When searching SMS, GTalkSMS can reply with only 1 big Xmpp messages or 1 per SMS</string>
    <string name="pref_app_sms_start_key">Magic SMS message</string>
    <string name="pref_app_sms_start_key_help">Magic SMS message body to start GTalkSMS</string>
    <string name="pref_app_select_status_icon">Status Bar Icons</string>
    <string name="pref_app_select_status_icon_help">Select icons that will appear in notification bar</string>
    <string name="pref_app_show_status_icon">Status notification icon</string>
    <string name="pref_app_show_status_icon_help">Check if you want to see GTalkSMS status icon in notification bar</string>
    <string name="pref_app_start_at_boot">At boot</string>
    <string name="pref_app_start_at_boot_help">Check if you want GTalkSMS to start at boot</string>
    <string name="pref_app_start_on_power_connected">When charging</string>
    <string name="pref_app_start_on_power_connected_help">Automatically starts GTalkSMS when a charger is connected</string>
    <string name="pref_app_start_on_wifi_connected">Wifi is on</string>
    <string name="pref_app_start_on_wifi_connected_help">Automatically starts GTalkSMS when Wifi is connected</string>
    <string name="pref_app_stop_on_power_disconnected">When charger disconnected</string>
    <string name="pref_app_stop_on_power_disconnected_delay">Delay (minutes) of stop by power</string>
    <string name="pref_app_stop_on_power_disconnected_delay_help">Time to wait before the delay occurs. In case you are just switching the power supply.</string>
    <string name="pref_app_stop_on_power_disconnected_help">Automatically stops GTalkSMS when a charger is disconnected</string>
    <string name="pref_app_stop_on_wifi_disconnected">Wifi is off</string>
    <string name="pref_app_stop_on_wifi_disconnected_help">Automatically stops GTalkSMS when Wifi is disconnected</string>
    <string name="pref_con">Connection settings</string>
    <string name="pref_con_cat">Connection settings</string>
    <string name="pref_con_manually_specify_server_settings">Manual server settings</string>
    <string name="pref_con_manually_specify_server_settings_help">Allows you to specify the XMPP Server Settings manually</string>
    <string name="pref_con_muc_force">Enforce this MUC Server</string>
    <string name="pref_con_muc_force_help">Enforces the use of the configured MUC Server, even if the used XMPP server provides a MCU component</string>
    <string name="pref_con_muc_password">Room password</string>
    <string name="pref_con_muc_password_help">Room password for SMS notifications (used only, if making the room private fails for some reason)</string>
    <string name="pref_con_muc_server">MUC Service</string>
    <string name="pref_con_muc_server_help">Service used for XMPP Groupchat. Leave the default if you don\'t know that this means! The MUC Service will only be used if you XMPP server doesn\'t provide one.</string>
    <string name="pref_con_securityMode">Connection Encryption</string>
    <string name="pref_con_securityMode_help">Enable or Disable the connection encryption</string>
    <string name="pref_con_server_host">Server host</string>
    <string name="pref_con_server_host_help">Server host used by the phone</string>
    <string name="pref_con_server_ping">Ping Interval</string>
    <string name="pref_con_server_ping_help">Ping interval in seconds to keep the connection alive. A lower value may drain your battery faster</string>
    <string name="pref_con_server_port">Server port</string>
    <string name="pref_con_server_port_help">Server port used by the phone</string>
    <string name="pref_con_server_settings">Server settings</string>
    <string name="pref_con_service_name">Service name</string>
    <string name="pref_con_service_name_help">Service name used by the phone</string>
    <string name="pref_con_use_compression">Compress Connection Data</string>
    <string name="pref_con_use_compression_help">Enable compression of the XMPP Connection</string>
    <string name="pref_con_xmppBlockedResourcePrefixes">Blocked resources for notified addresses</string>
    <string name="pref_con_xmppBlockedResourcePrefixes_help">Do not notify addresses that use those resources when logged in. Use new line as separator.</string>
    <string name="pref_notif">Notification settings</string>
    <string name="pref_notif_application_connection">Application connection</string>
    <string name="pref_notif_application_connection_help">Phone reconnect notification</string>
    <string name="pref_notif_battery_notif_interval">Battery notification interval</string>
    <string name="pref_notif_battery_notif_interval_help">This preference allows to set the battery notification interval in percents</string>
    <string name="pref_notif_battery_state">Battery state changes</string>
    <string name="pref_notif_battery_state_help">Battery state notification</string>
    <string name="pref_notif_battery_state_in_status">Set battery state changes in GTalk status</string>
    <string name="pref_notif_battery_state_in_status_help">Battery state notification in presence status</string>
    <string name="pref_notif_incoming_calls">Incoming calls</string>
    <string name="pref_notif_incoming_calls_help">Incoming call notification</string>
    <string name="pref_notif_incoming_sms">Incoming SMS</string>
    <string name="pref_notif_incoming_sms_help">Incoming SMS notification</string>
    <string name="pref_notif_sms_delivered">SMS delivered</string>
    <string name="pref_notif_sms_delivered_help">SMS delivery notification</string>
    <string name="pref_notif_sms_notifyInMuc">Status notifications to origin chat window</string>
    <string name="pref_notif_sms_sent">SMS sent</string>
    <string name="pref_notif_sms_sent_help">SMS sent notification</string>
</resources>