<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dip" >
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
             android:layout_width="70dip"
             android:layout_height="wrap_content"
             android:text="@string/panel_buddies_popup_button_user_id"
             android:textSize="14dip" />
        
        <TextView 
             android:id="@+id/buddyUserId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
             android:textSize="14dip"
             android:textStyle="bold" />
    </LinearLayout>
             
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >
        
        <TextView 
             android:layout_width="70dip"
             android:layout_height="wrap_content"
             android:text="@string/panel_buddies_popup_button_name"
             android:textSize="14dip" />
        
        <EditText
             android:id="@+id/editTextBuddyName"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:textSize="14dip"
             android:textStyle="bold"
             android:layout_weight="9" />
        
    </LinearLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.45dip"
        android:background="#808080"
        android:layout_marginTop="20dip"/>
        
    <ListView 
        android:id="@+id/ListViewLocations" 
        android:layout_width="fill_parent" 
        android:layout_height="0dip"
        android:layout_marginTop="10dip"
        android:layout_weight="9" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.45dip"
        android:background="#808080"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="10dip"/>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <Button
            style="@android:style/Widget.Holo.Button.Borderless"
            android:id="@+id/buttonInvite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/panel_buddies_popup_button_invite"
            android:layout_marginLeft="10dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="9"/>
        
        <Button
            style="@android:style/Widget.Holo.Button.Borderless"
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/panel_buddies_popup_button_ok"
            android:layout_marginRight="10dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</LinearLayout>